--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.3",
     "@react-navigation/native": "^6.0.2",
+    "buffer": "^6.0.3",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
     "expo-file-system": "~17.0.1",
@@ -29,6 +30,7 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "fast-png": "^6.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
