--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
     "@expo/vector-icons": "^14.0.3",
     "@react-navigation/native": "^6.0.2",
     "buffer": "^6.0.3",
-    "expo": "~51.0.28",
+    "expo": "^51.0.38",
     "expo-constants": "~16.0.2",
     "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.9",
     "expo-image-manipulator": "~12.0.5",
     "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.23",
-    "expo-splash-screen": "~0.27.5",
+    "expo-router": "^3.5.23",
+    "expo-splash-screen": "^0.27.6",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
@@ -34,6 +34,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-ble-plx": "3.1.2",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.10.1",
