adaptive icon and versioning now corrected

--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "FrameInk",
     "slug": "FrameInk",
-    "version": "1.0.0",
+    "version": "2.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "myapp",
@@ -15,6 +15,7 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.brayapp.frameink",
+      "buildNumber": "2",
       "infoPlist": {
         "NSCameraUsageDescription": "This app uses the camera to capture images for e-ink display conversion.",
         "NSPhotoLibraryUsageDescription": "This app accesses your photos to convert them for e-ink display.",
@@ -33,6 +34,7 @@
         "backgroundColor": "#ffffff"
       },
       "package": "com.brayapp.frameink",
+      "versionCode": 2,
       "permissions": [
         "android.permission.BLUETOOTH",
         "android.permission.BLUETOOTH_ADMIN",
