bluetooth not working at all, but modularised.

--- a/eas.json
+++ b/eas.json
@@ -25,6 +25,11 @@
       "android": {
         "buildType": "app-bundle"
       }
+    },
+    "local-apk": {
+      "android": {
+        "buildType": "apk"
+      }
     }
   },
   "submit": {
